feat: add get departments and cities
