# internal/server/v1/routes/city.routes.go
@@ -1,0 +1,13 @@
+package v1_routes
+
+import (
+	"col-moda/internal/controllers"
+
+	"github.com/gin-gonic/gin"
+)
+
+func CityRoutes(r *gin.RouterGroup, c controllers.CityController) {
+
+	r.GET("cities", c.FindCitiesByFilters)
+
+}
