# internal/server/v1/routes/deparment.routes.go
@@ -1,0 +1,13 @@
+package v1_routes
+
+import (
+	"col-moda/internal/controllers"
+
+	"github.com/gin-gonic/gin"
+)
+
+func DepartmentRoutes(r *gin.RouterGroup, c controllers.DepartmentController) {
+
+	r.GET("departments", c.FindAllDepartmentsByFilters)
+
+}
